# babel

./: CMakeLists.txt  Doxyfile  README.md  conanfile.txt  init.sql  server_config.json
build_dependency/: babel.db  config.json
client/sources/: main.cpp
client/sources/gui/: BabelApplication.cpp  BabelApplication.hpp  BabelClientUser.cpp  BabelClientUser.hpp  BabelWindow.cpp  BabelWindow.hpp
client/sources/gui/dialogs/: CallDialog.cpp  CallDialog.hpp  ProfileDialog.cpp  ProfileDialog.hpp  RequestCallDialog.cpp  RequestCallDialog.hpp
client/sources/gui/utilities/: AssetsManager.cpp  AssetsManager.hpp  Image.cpp  Image.hpp  Text.cpp  Text.hpp  UserUtilities.cpp  UserUtilities.hpp
client/sources/gui/widgets/: AddFriendWidget.cpp  (+17 more)
client/sources/network/: NetworkClient.cpp  NetworkClient.hpp
commons/audio/: AudioAPIException.hpp  IAudioAPI.hpp  PortAudioAPI.cpp  PortAudioAPI.hpp  PortAudioAPIException.hpp
commons/b12software/buffer/: CircularBuffer.cpp  CircularBuffer.hpp  CircularBufferException.hpp  NotEnoughDataInCircularBufferException.hpp  ThreadSafeCircularBuffer.hpp
commons/b12software/db/: SQLite.cpp  SQLite.hpp
commons/b12software/exception/: B12SoftwareException.hpp  NullPointerException.hpp
commons/codec/: CodecAPIException.hpp  ICodecAPI.hpp  OpusCodecAPI.cpp  OpusCodecAPI.hpp
commons/exception/: BabelException.hpp
commons/exception/db/: SqliteException.hpp
commons/logger/: DefaultLogger.cpp  DefaultLogger.hpp  ILogger.hpp  StandardLogger.cpp  StandardLogger.hpp
commons/network/: Datagram.cpp  Datagram.hpp  HostInfos.hpp  INetworkManager.hpp  IPacket.hpp  ITcpClient.hpp  ITcpServer.hpp  IUdpSocket.hpp  NetworkException.hpp
commons/protocol/: BabelDatagram.cpp  BabelDatagram.hpp  BabelPacket.cpp  BabelPacket.hpp
docs/: rfc42069.txt
server/sources/: BabelServer.cpp  BabelServer.hpp  BabelUser.cpp  BabelUser.hpp  ConfigLoader.cpp  ConfigLoader.hpp  main.cpp
server/sources/api/: Api.cpp  Api.hpp
setup/: setup_unix.sh
tests/buffer/: testsCircularBufferClear.cpp  testsCircularBufferGetNbBufferedBytes.cpp  testsCircularBufferIsFull.cpp  testsCircularBufferReadDelimiterData.cpp  testsCircularBufferReadRawData.cpp  testsCircularBufferWriteRawData.cpp
tests/functional/: testAssetsManager.cpp  testBabelClientUser.cpp  testBabelPacket.cpp  testBabelUser.cpp  testNetworkClient.cpp  testOpusCodecAPI.cpp  testPortAudioAPI.cpp  testUserUtilities.cpp
tests/packet/: PacketOpCode100.cpp  PacketOpCode200.cpp  PacketOpCode201.cpp  PacketOpCode202.cpp  PacketOpCode203.cpp  PacketOpCode204.cpp  PacketOpCode205.cpp  PacketOpCode210.cpp  PacketOpCode211.cpp  PacketOpCode212.cpp  PacketOpCode220.cpp  PacketOpCode221.cpp  PacketOpCode240.cpp  PacketOpCode241.cpp  PacketOpCode242.cpp  PacketOpCode300.cpp  PacketOpCode301.cpp  PacketOpCode302.cpp  PacketOpCode303.cpp  PacketOpCode304.cpp  PacketOpCode305.cpp  PacketOpCode310.cpp  PacketOpCode311.cpp  PacketOpCode312.cpp  PacketOpCode320.cpp  PacketOpCode321.cpp  PacketOpCode340.cpp
(+18 files in other folders)
